--- a/ui/src/components/modals/style/Play.scss
+++ b/ui/src/components/modals/style/Play.scss
@@ -2,11 +2,14 @@
 
 // Colors
 $black: rgba(0, 0, 0, 1);
+$black-2: rgba(13, 46, 32, 1);
 $dim-gray: rgba(94, 94, 94, 1);
 $dim-gray-2: rgba(106, 106, 106, 1);
 $silver: rgba(201, 198, 194, 1);
 $silver-2: rgba(196, 196, 196, 1);
 $transparent-silver: rgba(196, 196, 196, 0.6);
+$white: rgba(255, 255, 255, 1);
+$medium-sea-green: rgba(55, 208, 144, 1);
 
 // Typographies
 @mixin quantico-18-regular {
@@ -21,6 +24,13 @@ $transparent-silver: rgba(196, 196, 196, 0.6);
   font-weight: 400;
   line-height: normal;
 }
+@mixin roboto-26-black {
+  font-family: "Roboto";
+  font-size: 26px;
+  font-weight: 900;
+  line-height: normal;
+}
+
 .component1 {
   padding: 50px 0px 0 0;
 }
@@ -59,6 +69,14 @@ $transparent-silver: rgba(196, 196, 196, 0.6);
   margin-bottom: 164px;
   background-color: $silver-2;
 }
+
+//.movedropdown {
+//  width: 100px;
+//  height: 30px;
+//  margin-top: -5px;
+//  margin-left: 55px;
+//  background-color: rgba(196, 196, 196, 1);
+//}
 
 .orient {
   width: 100px;
@@ -142,4 +160,45 @@ $transparent-silver: rgba(196, 196, 196, 0.6);
   text-align: center;
   position: center;
   display: flex;
+}
+
+.deckDiv {
+  margin-top: -75px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+//.abilityCard {
+//  margin-top: 60px;
+//  margin-left: 35px;
+//  border-radius: 25px;
+//  display: flex;
+//  flex-direction: column;
+//  align-items: center;
+//  background: linear-gradient(
+//                  180deg,
+//                  $medium-sea-green 46%,
+//                  $black-2 100%
+//  );
+//  border: 1px solid $dim-gray;
+//  transform: scale(0.8);
+//  height: 250px;
+//  width: 200px;
+//}
+
+//.abilityCardNone {
+//  display: none;
+//}
+
+.vector {
+  margin-bottom: 25px;
+  transform: scale(0.7);
+}
+
+.cardName {
+  color: $white;
+  text-align: center;
+  margin-bottom: 15px;
+  @include roboto-26-black;
 }
