--- a/ui/src/components/modals/style/TakeTurn.scss
+++ b/ui/src/components/modals/style/TakeTurn.scss
@@ -83,6 +83,7 @@ $white: rgba(255, 255, 255, 1);
     border-radius: 50px;
     padding: 107px 50px 109.28px 49px;
     display: flex;
+  flex-direction: column;
     align-items: flex-start;
     background: linear-gradient(
       180deg,
@@ -90,10 +91,26 @@ $white: rgba(255, 255, 255, 1);
       $dim-gray-2 100%
     );
     border: 5px solid $dim-gray;
+    width: 1500px;
+    height: 700px;
+    transition: 1.1s ease-out;
+    transform: scale(0.7);
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    margin-top: -400px;
+    margin-left: -700px;
   }
+@supports (offset-rotation: 0deg) {
+  offset-rotation: 0deg;
+  offset-path: path("M 250,100 S -300,500 -700,-200");
+  .modal.off {
+    offset-distance: 100%;
+  }
+}
   .getCardButton {
-    margin-top: 237px;
-    margin-right: 20px;
+    margin-top: 100px;
+    margin-left: 130px;
     border-radius: 25px;
     padding: 44.28px 58.06px 40px;
     display: flex;
@@ -107,28 +124,34 @@ $white: rgba(255, 255, 255, 1);
     border: 1px solid $dim-gray;
   }
   .getCard1 {
-    margin-bottom: 9.53px;
+    margin-bottom: 0.4px;
   }
   .name {
-    width: 171px;
+    width: 200px;
     color: $white;
     text-align: center;
     @include roboto-36-black;
   }
   .flexWrapperOne {
-    margin-right: 38px;
+    margin-top: -75px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-start;
   }
   .message {
+    margin-left: 500px;
+    margin-bottom: 50px;
+    margin-top: -50px;
+    width: 100%;
     color: $black;
+    display: flex;
     text-align: center;
-    margin-bottom: 134px;
+    align-items: center;
     @include quantico-72-regular;
   }
   .fireMissileButton {
-    margin-left: 53px;
+    margin-top: 100px;
+    margin-left: 100px;
     border-radius: 25px;
     padding: 60.03px 8.85px 40px 8.84px;
     display: flex;
@@ -145,13 +168,14 @@ $white: rgba(255, 255, 255, 1);
     margin-bottom: 0.4px;
   }
   .nameTwo {
-    width: 75px;
+    width: 200px;
     color: $white;
     text-align: center;
     @include roboto-36-black;
   }
   .useCardButton {
-    margin-top: 237px;
+    margin-top: 100px;
+    margin-left: 100px;
     border-radius: 25px;
     padding: 22.63px 58.06px 42px;
     display: flex;
@@ -165,9 +189,10 @@ $white: rgba(255, 255, 255, 1);
     border: 1px solid $dim-gray;
   }
   .specialAbility1 {
-    margin-bottom: 9.49px;
+    margin-bottom: 0.4px;
   }
   .nameThree {
+    width: 200px;
     color: $white;
     text-align: center;
     @include roboto-36-black;
